--- a/src/main/webapp/resources/mainStyle.css
+++ b/src/main/webapp/resources/mainStyle.css
@@ -12,15 +12,18 @@ ul {
 
 li {
     float: right;
+    position: relative;
 }
 
 li a {
+	position: relative;
     display: block;
     color: white;
     padding: 12px;
     text-decoration: none;
     font-family: 'Lobster', serif;
     font-size: 20px;
+    cursor: pointer;
 }
 
 li a.topButton:hover {
@@ -106,7 +109,7 @@ div.right-column {
 }
 
 div.nav-container {
-	possition:relative;
+	position:relative;
 	padding: 0px;
 	margin:auto;
 }
