LEK NA HALUKSY. LEKARZE GO NIENAWIDZO. ZOBACZ MEMY

--- a/src/main/webapp/WEB-INF/views/allUsers.html
+++ b/src/main/webapp/WEB-INF/views/allUsers.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
+<head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lobster&subset=latin-ext">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Sansita&subset=latin-ext">
 <link rel="stylesheet" type="text/css" href="../../resources/mainStyle.css" th:href="@{resources/mainStyle.css}">
 <link rel="icon" href="../../resources/images/moose_front.png" th:href="@{/resources/images/moose_front.png}">
 <meta charset="UTF-8">
-<head>
 <title>Wszyscy zarejestrowani Przyjaciule</title>
 <style>
 
