--- a/src/main/webapp/WEB-INF/views/myProfile.html
+++ b/src/main/webapp/WEB-INF/views/myProfile.html
@@ -67,47 +67,6 @@ p.feed-the-moose {
 	bottom: 40px;
 }
 
-div.time-mooose-status-div {
-	width: 600px;
-	float:left;
-	margin: 10px;
-	border: 2px solid #89bdd3;
-	border-radius: 10px;
-}
-
-p.time-moose-status-user {
-	float:left;
-	margin:5px;
-	width: 300px;
-	font-family: Sansita;
-	font-size: 16px;
-}
-
-p.time-moose-status-date {
-	float:right;
-	margin:5px;
-	font-family: Sansita;
-	font-size: 16px;
-}
-
-p.time-moose-status-location {
-	float:left;
-	margin:5px;
-	font-family: Sansita;
-	font-size: 14px;
-}
-
-div.time-moose-status-content {
-	float:left;
-	margin: 5px;
-    width: 580px;
-    height: auto;
-    word-wrap: break-word;
-    padding: 5px;
-    font-family: Sansita;
-	font-size: 18px;
-}
-
 </style>
 
 </head>
@@ -131,11 +90,11 @@ div.time-moose-status-content {
 			</form>
 			
 			<div class="time-mooose-status-div" th:each="timeMooseStatus : ${timeMooseStatusList}">
-				<img alt="avatarXS" src="../../resources/images/moose-avatarxs.jpg"
-					 th:alt="${user.firstName}" th:src="@{/myProfile/miniatureDisplay}" style="float:left;margin:5px">
+				<img class="timeMooseStatusAvatar" alt="avatarXS" src="../../resources/images/moose-avatarxs.jpg"
+					 th:alt="${user.firstName}" th:src="@{/myProfile/miniatureDisplay}">
 				<p class="time-moose-status-user" th:text="${user.firstName}+' '+${user.lastName}">Jan Kowalski</p>
 				<p class="time-moose-status-date" th:text="${timeMooseStatus.creationDate}">01.01.2017</p>
-				<p class="time-moose-status-location">TODO lokacja</p>
+				<p class="time-moose-status-location"></p>
 				<div class="time-moose-status-content" th:text="${timeMooseStatus.text}">Tekst statusu</div>
 			</div>
 			
