--- a/src/main/webapp/WEB-INF/views/myWall.html
+++ b/src/main/webapp/WEB-INF/views/myWall.html
@@ -23,14 +23,7 @@
 	
 		<div class="center-column">
 		
-			<div class="time-mooose-status-div" th:each="timeMooseStatus : ${timeMooseStatusList}">
-				<img class="timeMooseStatusAvatar" alt="avatarXS" src="../../resources/images/moose-avatarxs.jpg"
-					 th:alt="${user.firstName}" th:src="@{/profile/} + ${timeMooseStatus.user.userId} + '/miniatureDisplay'">
-				<p class="time-moose-status-user" th:text="${timeMooseStatus.user.firstName}+' '+${timeMooseStatus.user.lastName}">Jan Kowalski</p>
-				<p class="time-moose-status-date" th:text="${timeMooseStatus.creationDate}">01.01.2017</p>
-				<p class="time-moose-status-location"></p>
-				<div class="time-moose-status-content" th:text="${timeMooseStatus.text}">Tekst statusu</div>
-			</div>
+			<div th:replace ="~{statuses :: timeMoose}"></div>
 
 		</div>
 		
@@ -39,6 +32,7 @@
 
 </body>
 <script src="../../resources/floatingComponents.js" th:src="@{/resources/floatingComponents.js}"></script>
+<script src="../../resources/comments.js" th:src="@{/resources/comments.js}"></script>
 <script>
 
 </script>
