--- a/src/main/webapp/WEB-INF/views/welcome.html
+++ b/src/main/webapp/WEB-INF/views/welcome.html
@@ -18,8 +18,6 @@ div.one-big-column {
 	display: flex;
 	background-color: white;
     width: 1037px;
-    height: auto;
-    min-height: 100px;
 	border-radius: 5px;
 	padding: 10px;
 }
@@ -50,24 +48,18 @@ div.one-big-column {
 }
 
 p {
-	font-size: 16px;
-	font-family: Sansita;
 	width: 60px;
 	float:left;
 }
 
 input[type=text], input[type=password] {
-	font-family: Sansita;
 	border-radius: 5px;
 	width: 300px;
 	height: 30px;
-	font-size: 18px;
 	margin: 10px;
 }
 
 input[type=submit] {
-	font-family: Sansita;
-	font-size: 16px;
 	border-radius: 5px;
 	height: 40px;
 	width: 150px;
@@ -133,11 +125,11 @@ div.error-div {
 			<img class = "los" src="../../resources/images/los_przebiega.png"
 				th:src="@{/resources/images/los_przebiega.png}"/>
 			<form method="POST" th:action="@{/login}" accept-charset="UTF-8">
-				<p>Login</p>
-				<input id="loginInput" type="text" name="login" />
-				<p>Hasło</p>
-				<input type="password" name="password" />
-				<input type="submit" value="Zaloguj się" />
+				<p class="sansita16">Login</p>
+				<input id="loginInput" type="text" class="sansita18" name="login" />
+				<p class="sansita16">Hasło</p>
+				<input type="password" name="password" class="sansita18" />
+				<input type="submit" class="sansita16" value="Zaloguj się" />
 				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 			</form>		
 		</div>
@@ -146,18 +138,18 @@ div.error-div {
 				th:src="@{/resources/images/los_przebiega.png}"/>
 			<h1 class="register"> Zarejestruj się </h1>
 			<form method="POST" th:action="@{/register}" enctype="multipart/form-data" accept-charset="UTF-8">
-				<p>Imię</p>
-				<input type="text" name="firstName" />
-				<p>Nazwisko</p>
-				<input type="text" name="lastName" />
-				<p>Login</p>
-				<input type="text" name="login" />
-				<p>Hasło</p>
-				<input type="password" name="password" />
+				<p class="sansita16">Imię</p>
+				<input type="text" name="firstName" class="sansita18" />
+				<p class="sansita16">Nazwisko</p>
+				<input type="text" name="lastName" class="sansita18" />
+				<p class="sansita16">Login</p>
+				<input type="text" name="login" class="sansita18" />
+				<p class="sansita16">Hasło</p>
+				<input type="password" name="password" class="sansita18" />
 				<input id="openFileDialog" type="file" name="profilePicture" accept="image/jpeg,image/png,image/gif" style="display:none" />
-				<p>Japa</p>
-				<input id="profilePictureInput" type="text" value="Kliknij by wybrać" readonly/>
-				<input type="submit" value="Zarejestruj się" />
+				<p class="sansita16">Japa</p>
+				<input id="profilePictureInput" type="text" class="sansita18" value="Kliknij by wybrać" readonly/>
+				<input type="submit" class="sansita16" value="Zarejestruj się" />
 				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 			</form>	
 		</div>
