--- a/src/main/webapp/resources/mainStyle.css
+++ b/src/main/webapp/resources/mainStyle.css
@@ -16,6 +16,11 @@ li {
     position: relative;
 }
 
+
+li:hover {
+	background-color: #377995;
+}
+
 li a {
 	position: relative;
     display: block;
@@ -25,10 +30,6 @@ li a {
     font-family: 'Lobster', serif;
     font-size: 20px;
     cursor: pointer;
-}
-
-li a:hover {
-	background-color: #377995;
 }
 
 .myAvatarOnNav {
@@ -223,49 +224,165 @@ img.profilePhoto {
 	margin: 20px;
 }
 
-div.time-mooose-status-div {
+div.status-container {
 	width: 600px;
-	float:left;
+	float: left;
 	margin: 5px 10px 5px 10px;
 	border: 2px solid #89bdd3;
 	border-radius: 10px;
 }
 
-p.time-moose-status-user {
-	float:left;
-	margin:5px;
-	width: 300px;
-	font-family: Sansita;
-	font-size: 16px;
+/* The CSS docs are very clear about this: parent elements NEVER expand to contain floated elements */
+/* :(( */
+
+img.avatarSmall {
+	border-radius: 10px;
+	display: block; /* "By default, an image is rendered inline", dlatego pod obrazkiem jest kawalek wolnego miejsca jak nie damy tej linijki */
 }
 
-p.time-moose-status-date {
-	float:right;
-	margin:5px;
-	font-family: Sansita;
-	font-size: 16px;
+img.commentAvatar {
+	border-radius: 10px;
+	width: 40px;
+	height: 40px;
+	display: block;
 }
 
-p.time-moose-status-location {
-	float:left;
-	margin:5px;
+div.nameDateLocationContainer {
+	width: 100%;
+	height: 50px;
+}
+
+p.statusLocation {
+	margin: 0px;
+	margin-top: 10px;
+}
+
+div.statusMiddle {
+    width: 100%;
+    word-wrap: break-word;
+}
+
+div.statusBottom {
+	display: flex;
+	margin-left: 5px;
+}
+
+div.statusBottomPart {
+	display: flex;
+	border-radius: 5px;
+	margin-right: 5px;
+}
+
+div.statusBottomPart:hover {
+	background-color: #89bdd3;
+	cursor: pointer;
+}
+
+p.lajksAndHejtsButtons {
+	margin: 0px 10px 0px 5px;
+}
+
+.sansita14 {
 	font-family: Sansita;
 	font-size: 14px;
 }
 
-div.time-moose-status-content {
-	float:left;
-	margin: 5px;
-    width: 580px;
-    height: auto;
-    word-wrap: break-word;
-    padding: 5px;
-    font-family: Sansita;
+.sansita16 {
+	font-family: Sansita;
+	font-size: 16px;
+}
+
+.sansita18 {
+	font-family: Sansita;
 	font-size: 18px;
 }
 
-img.timeMooseStatusAvatar {
-	border-radius: 10px;
-	float:left;
-	margin:5px;
+.margin0px {
+	margin: 0px;
 }
+
+.margin5px {
+	margin: 5px;
+}
+
+.padding0px {
+	padding: 0px;
+}
+
+.padding5px {
+	padding: 5px;
+}
+
+.autoMarginleft {
+	margin-left:auto;
+}
+
+.flex {
+	display: flex;
+}
+
+.flex100 {
+	display: flex;
+	width: 100%;
+}
+
+.flexWrap {
+	
+}
+
+textarea.commentTextArea {
+	width:545px;
+    height: 50px;
+    padding: 6px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #fcfcfc;
+    resize: none;
+    margin-left: 50px;
+}
+
+textarea.commentTextArea:focus {
+    border: 2px solid #555;
+}
+
+.lajksAndHejts {
+	padding-top: 5px;
+	padding-left: 10px;
+	font-family: Sansita;
+	font-size: 14px;
+	color: #377995;
+	background-color: #e3e3e3;
+	border-bottom-left-radius: 8px;
+	border-bottom-right-radius: 8px;
+	min-height: 25px;
+	margin:0px;
+}
+
+.commentsSection{
+	background-color: #e3e3e3;
+	margin: 0px;
+	margin-left: 1px;
+	border-radius: 10px;
+}
+
+.commentsList {
+	padding-bottom: 5px;
+	display: none;
+}
+
+.comment {
+	background-color: white;
+	margin-left:50px;
+	margin-right:5px;
+	margin-bottom:3px;
+	margin-top:2px;
+	border-radius: 10px;
+	border: solid 1px #377995;
+	
+}
+
+
+
+
+
